--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Serverless Math</title>
-  <style>
-    body { font-family: sans-serif; text-align: center; margin-top: 50px; }
-    input, button { padding: 8px; margin: 5px; }
-  </style>
-</head>
-<body>
-  <h1>🧮 Serverless Math</h1>
-  <input id="a" type="number" placeholder="First number" />
-  <input id="b" type="number" placeholder="Second number" />
-  <button onclick="add()">Add</button>
-  <p id="result"></p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Serverless Math</title>
+    <style>
+      body {
+        font-family: sans-serif;
+        text-align: center;
+        margin-top: 50px;
+      }
+      input,
+      button {
+        padding: 8px;
+        margin: 5px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>🧮 Serverless Math</h1>
+    <input id="a" type="number" placeholder="First number" />
+    <input id="b" type="number" placeholder="Second number" />
+    <button onclick="calculate('add')">Add</button>
+    <button onclick="calculate('subtract')">Subtract</button>
+    <button onclick="calculate('multiply')">Multiply</button>
+    <button onclick="calculate('divide')">Divide</button>
+    <p id="result"></p>
 
-  <script>
-    async function add() {
-      const a = document.getElementById('a').value;
-      const b = document.getElementById('b').value;
-      const res = await fetch(`/api/add?a=${a}&b=${b}`);
-      const data = await res.json();
-      document.getElementById('result').textContent = `Sum: ${data.sum}`;
-    }
-  </script>
-</body>
+    <script>
+      async function calculate(op) {
+        const a = document.getElementById("a").value;
+        const b = document.getElementById("b").value;
+        const res = await fetch(`/api/math?op=${op}&a=${a}&b=${b}`);
+        const data = await res.json();
+        document.getElementById("result").textContent = data.error
+          ? `❌ ${data.error}`
+          : `✅ ${op} = ${data.result}`;
+      }
+    </script>
+  </body>
 </html>
